// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`I/O Schema and related helpers > ensureExtension() > Should merge intersection object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "additionalProperties": false,
      "properties": {
        "one": {
          "type": "string",
        },
      },
      "required": [
        "one",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "two": {
          "type": "number",
        },
      },
      "required": [
        "two",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "three": {
          "type": "null",
        },
      },
      "required": [
        "three",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "four": {
          "type": "boolean",
        },
      },
      "required": [
        "four",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "five": {
          "type": "string",
        },
      },
      "required": [
        "five",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "six": {
          "type": "number",
        },
      },
      "required": [
        "six",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`I/O Schema and related helpers > ensureExtension() > Should merge mixed object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "additionalProperties": false,
      "properties": {
        "one": {
          "type": "string",
        },
      },
      "required": [
        "one",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "two": {
          "type": "number",
        },
      },
      "required": [
        "two",
      ],
      "type": "object",
    },
    {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "three": {
              "type": "null",
            },
          },
          "required": [
            "three",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "four": {
              "type": "boolean",
            },
          },
          "required": [
            "four",
          ],
          "type": "object",
        },
      ],
    },
    {
      "additionalProperties": false,
      "properties": {
        "five": {
          "type": "string",
        },
      },
      "required": [
        "five",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`I/O Schema and related helpers > ensureExtension() > Should merge union object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "one": {
              "type": "string",
            },
          },
          "required": [
            "one",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "two": {
              "type": "number",
            },
          },
          "required": [
            "two",
          ],
          "type": "object",
        },
      ],
    },
    {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "three": {
              "type": "null",
            },
          },
          "required": [
            "three",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "four": {
              "type": "boolean",
            },
          },
          "required": [
            "four",
          ],
          "type": "object",
        },
      ],
    },
    {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "five": {
              "type": "string",
            },
          },
          "required": [
            "five",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "six": {
              "type": "number",
            },
          },
          "required": [
            "six",
          ],
          "type": "object",
        },
      ],
    },
  ],
}
`;

exports[`I/O Schema and related helpers > ensureExtension() > Zod Issue #600: can not intersect object schema with passthrough and transformation 1`] = `
Error({
  "message": "Unmergable intersection. Error path: ["id"]",
})
`;

exports[`I/O Schema and related helpers > makeFinalInputSchema() > Should merge input object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "additionalProperties": false,
      "properties": {
        "one": {
          "type": "string",
        },
      },
      "required": [
        "one",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "two": {
          "type": "number",
        },
      },
      "required": [
        "two",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "three": {
          "type": "null",
        },
      },
      "required": [
        "three",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "four": {
          "type": "boolean",
        },
      },
      "required": [
        "four",
      ],
      "type": "object",
    },
  ],
}
`;
